--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,20 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="190dp">
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/cardview_default_elevation"
+        android:paddingBottom="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/img"
-                android:src="@mipmap/ic_launcher"
+            android:layout_height="wrap_content">
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/networkImageView"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true" />
             <!-- private int mData;
     private String wrapperType;
     private String kind;
@@ -25,86 +28,49 @@
     private String artistName;
     private String collectionName;-->
             <TextView
-                android:id="@+id/mData"
-                android:text="Mdata"
+                android:id="@+id/titleSong"
+                android:text=" titulo de la cancion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
-            <TextView
-                android:id="@+id/wraper"
-                android:text="Mdata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/mData"
-                android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
-            <TextView
-                android:id="@+id/kind"
-                android:text="Mdata"
-                android:layout_width="wrap_content"
-                android:layout_below="@id/wraper"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
+                android:layout_toRightOf="@+id/networkImageView"
+                android:layout_toEndOf="@+id/networkImageView" />
             <TextView
                 android:id="@+id/artist"
-                android:text="Mdata"
+                android:text="artista"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/kind"
+                android:layout_below="@id/titleSong"
                 android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
+                android:layout_toRightOf="@+id/networkImageView"
+                android:layout_toEndOf="@+id/networkImageView" />
+            <TextView
+                android:id="@+id/artistId"
+                android:text="id del artista"
+                android:layout_width="wrap_content"
+                android:layout_below="@id/artist"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:layout_toRightOf="@+id/networkImageView"
+                android:layout_toEndOf="@+id/networkImageView" />
+
             <TextView
                 android:id="@+id/collection"
                 android:text="Mdata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/artist"
+                android:layout_below="@id/artistId"
                 android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
-            <TextView
-                android:id="@+id/trackId"
-                android:text="Mdata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/collection"
-                android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
-
-            <TextView
-                android:id="@+id/artistName"
-                android:text="Mdata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/trackId"
-                android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
-
-            <TextView
-                android:id="@+id/collectionName"
-                android:text="Mdata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/artistName"
-                android:textSize="18sp"
-                android:layout_toRightOf="@+id/img"
-                android:layout_toEndOf="@+id/img" />
+                android:layout_toRightOf="@+id/networkImageView"
+                android:layout_toEndOf="@+id/networkImageView" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dale Nigga!"
                 android:id="@+id/button"
-                android:layout_below="@+id/wraper"
+                android:layout_alignTop="@+id/networkImageView"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
 
