--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorButtonNormal">#2196f3</item>
+        <!-- https://gist.github.com/dmytrodanylyk/3513e42839ae4309d2b5 -->
     </style>
 
     <style name="AppTheme.NoActionBar">
