Implementacion de Picasso, y busqueda

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,14 +12,26 @@
     tools:context="company.example.volleyrecycleview.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:id="@+id/txt1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dale Moreno!!" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/labelTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/txtSearch"
+            android:drawableEnd="@drawable/ic_search_black_36dp"
+            android:drawableRight="@drawable/ic_search_black_36dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/search_label"
+            android:imeOptions="actionGo|actionSend|flagNoEnterAction|actionDone"
+            android:maxLines="1"/>
+
+    </android.support.design.widget.TextInputLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mRV"
-        android:layout_below="@+id/txt1"
+        android:layout_below="@+id/labelTxt"
+        android:paddingTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
