--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:paddingRight="5dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -16,12 +17,17 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <com.android.volley.toolbox.NetworkImageView
+            <!--com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/networkImageView"
                 android:layout_width="1100dp"
                 android:layout_height="330dp"
                 android:scaleType="centerCrop"
-                android:background="#000000"/>
+                android:background="#000000"/-->
+            <ImageView
+                android:id="@+id/IMG"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:id="@+id/titleSong"
@@ -29,9 +35,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
-                android:layout_below="@id/networkImageView"
-                android:layout_alignStart="@id/networkImageView"
-                android:layout_alignLeft="@id/networkImageView"/>
+                android:layout_below="@id/IMG"
+                android:layout_alignStart="@id/IMG"
+                android:layout_alignLeft="@id/IMG"/>
             <TextView
                 android:id="@+id/artist"
                 android:text="artista"
@@ -39,36 +45,19 @@
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:layout_below="@id/titleSong"
-                android:layout_alignStart="@id/networkImageView"
-                android:layout_alignLeft="@id/networkImageView"/>
-            <TextView
-                android:id="@+id/artistId"
-                android:text="id del artista"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:layout_below="@id/artist"
-                android:layout_alignStart="@id/networkImageView"
-                android:layout_alignLeft="@id/networkImageView"/>
+                android:layout_alignStart="@id/IMG"
+                android:layout_alignLeft="@id/IMG"/>
 
-            <TextView
-                android:id="@+id/collection"
-                android:text="Mdata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/artistId"
-                android:textSize="18sp"
-                android:layout_alignStart="@id/networkImageView"
-                android:layout_alignLeft="@id/networkImageView" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dale Nigga!"
+                android:text="@string/details"
+                android:textColor="#FFFF"
                 android:id="@+id/button"
-                android:layout_below="@id/collection"
-                android:layout_alignRight="@id/networkImageView"
-                android:layout_alignBaseline="@id/collection"/>
+                android:layout_below="@id/artist"
+                android:layout_alignRight="@id/IMG"
+                android:layout_alignBaseline="@id/artist"/>
 
 
         </RelativeLayout>
