--- a/app/src/main/res/layout/activity_detail_song.xml
+++ b/app/src/main/res/layout/activity_detail_song.xml
@@ -21,6 +21,15 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            <ImageView
+                android:id="@+id/detailImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/default_placeholder"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7"/>
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
