--- a/app/src/main/res/layout/activity_detail_song.xml
+++ b/app/src/main/res/layout/activity_detail_song.xml
@@ -23,8 +23,8 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
             <ImageView
                 android:id="@+id/detailImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@mipmap/default_placeholder"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
