--- a/app/src/main/res/layout/content_detail_song.xml
+++ b/app/src/main/res/layout/content_detail_song.xml
@@ -8,10 +8,50 @@
     tools:context="company.example.volleyrecycleview.DetailSong"
     tools:showIn="@layout/activity_detail_song">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/text_margin">
+        <TextView
+            android:id="@+id/artistNameLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="@dimen/text_margin"
+            android:text="@string/ArtistName" />
+        <TextView
+            android:id="@+id/artistName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/artistNameLbl"
+            android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginBottom="@dimen/text_margin"
+            android:text="@string/ArtistName" />
+        <TextView
+            android:id="@+id/albumLbl"
+            android:text="@string/album"
+            android:layout_below="@id/artistName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="@dimen/text_margin"/>
+        <TextView
+            android:id="@+id/album"
+            android:text="@string/album"
+            android:layout_below="@id/albumLbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/text_margin"/>
+        <TextView
+            android:id="@+id/description"
+            android:text="@string/large_text"
+            android:layout_below="@id/album"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/text_margin"/>
+
+    </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
